--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-sanitize.js"></script>
         <script src="./js/angularjs/indexAngular.js" type="text/javascript"></script>
-        <script src="./js/angularjs/e2e.js"></script>
+        <script src="./js/mockbackend/e2e.js"></script>
         <!--
             Add your allowed additional libraries/frameworks here
             you can use CDN or local files (put them under the "vendor" folder).
         -->
     </head>
-    <body ng-app="myAppE2E" ng-cloak>
+    <body ng-app="myBackEnd" ng-cloak>
         <!-- <script src="js/mockAPIs.js"></script> -->
         <div ng-controller="MainCtrl as $ctrl">
 
