--- a/index.html
+++ b/index.html
@@ -1,36 +1,128 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Juniper Networks: Contrail -- Coding Challenge</title>
-        <!-- feel free to remove below link to demo.css, if you don't use it -->
-        <link rel="stylesheet" type="text/css" href="css/demo.css" />
-
-        <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-        <!-- <script src="js/vendor/jquery.mockjax.min.js"></script> -->
-        <script src="https://d3js.org/d3.v3.min.js"></script>
+<html  ng-app="myBackEnd">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Juniper Networks: Contrail -- Coding Challenge</title>
 
 
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-mocks.js"></script>
+  <!-- STYLES -->
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="./js/vendor/rdash-ui/dist/css/rdash.css">
+  <style>
+  svg {
+    font-family: Verdana, sans-serif;
+    font-size: 8pt;
+    line-height: 12pt;
+    background: #ffffff;
+    color: #555555;
+  }
+  .axis path, .axis line {
+    fill: none;
+    stroke: #555555;
+    shape-rendering: crispEdges;
+  }
 
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-sanitize.js"></script>
-        <script src="./js/angularjs/indexAngular.js" type="text/javascript"></script>
-        <script src="./js/mockbackend/e2e.js"></script>
-        <!--
-            Add your allowed additional libraries/frameworks here
-            you can use CDN or local files (put them under the "vendor" folder).
-        -->
-    </head>
-    <body ng-app="myBackEnd" ng-cloak>
-        <!-- <script src="js/mockAPIs.js"></script> -->
-        <div ng-controller="MainCtrl as $ctrl">
+  .line {
+    fill: none;
+    stroke: orange;
+    stroke-width: 1px;
+  }
+  </style>
 
+
+  <!-- SCRIPTS -->
+  <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-mocks.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.4.0/ui-bootstrap-tpls.min.js"></script>
+  <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-cookies.min.js.map"></script> -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.min.js"></script>
+
+
+  <!-- Custom Scripts -->
+  <script type="text/javascript" src="./js/angular/mainApp.js"></script>
+  <script type="text/javascript" src="./js/mockbackend/mockbackend.js"></script>
+
+
+</head>
+
+<body ng-controller="mainCtrl">
+  <!-- Page Wrapper -->
+  <div id="page-wrapper" ng-class="{'open': toggle}" ng-cloak>
+
+    <!-- Sidebar -->
+    <div id="sidebar-wrapper">
+      <ul class="sidebar">
+        <li class="sidebar-main">
+          <a ng-click="toggleSidebar()">
+            Server Monitor
+            <span class="menu-icon glyphicon glyphicon-menu-hamburger"></span>
+          </a>
+        </li>
+        <!-- <li class="sidebar-title"><span>NAVIGATION</span></li> -->
+        <li class="sidebar-list">
+          <a href="#/statschart" ng-click="title='Live Monitoring'">Live Charts<span class="menu-icon glyphicon glyphicon-time"></span></a>
+        </li>
+        <li class="sidebar-list">
+          <a href="#/userentry" ng-click="title='Favourites'">Data Entry <span class="menu-icon glyphicon glyphicon-star"></span></a>
+        </li>
+        <!-- <li class="sidebar-list">
+          <a href="#/search" ng-click="title='Search Clipboard'">Search <span class="menu-icon glyphicon glyphicon-search"></span></a>
+        </li>
+        <li class="sidebar-list">
+          <a href="#" ng-click="logout()">Logout <span class="menu-icon glyphicon glyphicon-off"></span></a>
+        </li> -->
+      </ul>
+      <!-- <div class="sidebar-footer">
+      <div class="col-md-12">
+      About
+    </div>
+  </div> -->
+</div>
+<!-- End Sidebar -->
+
+<div id="content-wrapper">
+  <div class="page-content">
+
+    <!-- Header Bar -->
+    <div class="row header">
+      <div class="col-xs-12">
+        <div class="meta">
+          <div class="page">
+            <h3>{{title}}</h3>
+          </div>
         </div>
-        <!--
-            The below script is for demo purpose only,
-            remove it before starting development.
-        -->
-        <!-- <script src="js/demo/demo_driver.js"></script> -->
-    </body>
+      </div>
+    </div>
+    <!-- End Header Bar -->
+
+    <!-- Main Content -->
+    <div ui-view></div>
+
+  </div><!-- End Page Content -->
+</div><!-- End Content Wrapper -->
+</div>
+<!-- End Page Wrapper -->
+</body>
+
+<!-- Date Range Picker -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
+<script type="text/javascript">
+$(function() {
+    $('input[name="daterange"]').daterangepicker({
+        timePicker: true,
+        timePickerIncrement: 30,
+        locale: {
+            format: 'MM/DD/YYYY h:mm A'
+        }
+    });
+});
+</script>
+
 </html>
