--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
   .line {
     fill: none;
-    stroke: orange;
-    stroke-width: 1px;
+    stroke-width: 2px;
   }
   </style>
 
@@ -39,7 +38,6 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.4.0/ui-bootstrap-tpls.min.js"></script>
   <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-cookies.min.js.map"></script> -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.min.js"></script>
-
 
   <!-- Custom Scripts -->
   <script type="text/javascript" src="./js/angular/mainApp.js"></script>
@@ -63,23 +61,22 @@
         </li>
         <!-- <li class="sidebar-title"><span>NAVIGATION</span></li> -->
         <li class="sidebar-list">
-          <a href="#/statschart" ng-click="title='Live Monitoring'">Live Charts<span class="menu-icon glyphicon glyphicon-time"></span></a>
+          <a href="#/livechart" ng-click="title='Live Charts'">Live Charts<span class="menu-icon fa fa-line-chart"></span></a>
         </li>
         <li class="sidebar-list">
-          <a href="#/userentry" ng-click="title='Favourites'">Data Entry <span class="menu-icon glyphicon glyphicon-star"></span></a>
-        </li>
-        <!-- <li class="sidebar-list">
-          <a href="#/search" ng-click="title='Search Clipboard'">Search <span class="menu-icon glyphicon glyphicon-search"></span></a>
+          <a href="#/barchart" ng-click="title='Bar Chart'">Bar Charts<span class="menu-icon fa fa-bar-chart"></span></a>
         </li>
         <li class="sidebar-list">
-          <a href="#" ng-click="logout()">Logout <span class="menu-icon glyphicon glyphicon-off"></span></a>
-        </li> -->
+          <a href="#/userentry" ng-click="title='Data Entry'">Data Entry <span class="menu-icon fa fa-server"></span></a>
+        </li>
       </ul>
-      <!-- <div class="sidebar-footer">
-      <div class="col-md-12">
-      About
-    </div>
-  </div> -->
+      <div class="sidebar-footer">
+        <div class="col-md-12">
+          <a href="https://github.com/gaurav51289/CodingChallenge" target="_blank" ng-click="title='Data Entry'" style="font-size: 20px !important;">
+            GitHub <span class="menu-icon fa fa-github"></span>
+          </a>
+        </div>
+      </div>
 </div>
 <!-- End Sidebar -->
 
@@ -99,30 +96,21 @@
     <!-- End Header Bar -->
 
     <!-- Main Content -->
-    <div ui-view></div>
+    <div ui-view>
+      <div class="row">
+        <div id="line-chart-div" class="col-lg-12" style="height:550px !important;">
+          <center><span style="color:#9E9E9E">Select charts from the sidebar.</span></center>
+        </div>
+      </div>
+    </div>
 
   </div><!-- End Page Content -->
 </div><!-- End Content Wrapper -->
 </div>
 <!-- End Page Wrapper -->
 </body>
-
-<!-- Date Range Picker -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
-<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
-<script type="text/javascript">
-$(function() {
-    $('input[name="daterange"]').daterangepicker({
-        timePicker: true,
-        timePickerIncrement: 30,
-        locale: {
-            format: 'MM/DD/YYYY h:mm A'
-        }
-    });
-});
-</script>
-
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </html>
